--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
     font-family: sans-serif;
     background-color: #EAEAEA;
-    text-align: center;
 }
 
 h1 {
@@ -167,3 +166,155 @@ a:-webkit-any-link {
     font-size: 18px;
     font-weight: 700;
 }
+
+.button__primary:hover {
+    background-image: linear-gradient(rgb(251, 255, 25), blue);
+}
+
+.mobile-header .navbar-inverse .navbar-nav > li > a {
+    color: #333333;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+a {
+    text-decoration: none;
+    font-size: 20px;
+    color: black;
+    background-image: linear-gradient(to right, white);
+    padding: 15px;
+    border-radius: 10px;
+    text-align: center;
+    justify-content: flex-end;
+}
+
+a {
+    font-size: 15px;
+    color: blue;
+}
+
+a:hover {
+    color: rgb(0, 0, 0);
+    
+}
+
+main{
+  position: relative;
+  top: 100px;
+  left: 0px;
+  z-index: 0px; 
+}
+
+nav {
+    color: #000;
+}
+
+.w-nav {
+    z-index: 1000;
+    background-color: black;
+    position: absolute;
+}
+* {
+    box-sizing: border-box;
+}
+
+.nav__link.phone_hide {
+    display: none;
+}
+
+.nav__link {
+    margin-bottom: 10px;
+}
+.nav__link {
+    color: #000;
+    padding: 10px 15px;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 100%;
+    text-decoration: none;
+    transition: opacity .3s;
+}
+.w-nav-link {
+    vertical-align: top;
+    color: #222;
+    text-align: left;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 20px;
+    text-decoration: none;
+    display: inline-block;
+    position: relative;
+}
+a {
+    background-color: rgba(0, 0, 0, 0);
+}
+* {
+    box-sizing: border-box;
+}
+
+a:-webkit-any-link {
+    color: black;
+    cursor: pointer; 
+}
+
+.button__primary.header {
+    box-shadow: none;
+    flex: none;
+    margin-left: auto;
+    padding: 20px;
+}
+
+
+.button__primary{
+    border: 1px solid var(--orange);
+    color: orange;
+    background-color: orangered;
+    width: 150px;
+    height: 40px;
+    border-radius: 2px;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 40px;
+    font-size: 18px;
+    font-weight: 700;
+}
+
+h2 {
+    color: green;
+    font-size: 15px;
+    padding-right: 150px;
+}
+
+.principles {
+    display: flex;
+    border-top: 5px solid #000000;
+    border-bottom: 5px solid #000000;
+    justify-content: space-between; 
+    width: 700px;
+    margin: 0 30px;
+    padding: 30px;
+    text-align: center;
+}
+
+.principle {
+    width: 220px;
+}
+
+.slogan {
+    display: flex;
+    padding: 30px;
+    color: #000000;
+    margin-left: 150px;
+}
+
+footer {
+    background-image: linear-gradient(#0971d3, white);
+    padding: 10px;
+    margin-top: 20px;
+}
+
+footer p {
+    background-color: white;
+    padding: 5px;
+    text-align: center;
+ }
